--- a/app/views/shared/_left.html.erb
+++ b/app/views/shared/_left.html.erb
@@ -9,5 +9,5 @@
   <li><%= link_to "Blog", blog_index_path %></li>
   <li><a href="#">Testimonials</a></li>
   <li><a href="#">Video</a></li>
-  <li><a href="#">Featured sites</a></li>
+  <li><%= link_to "Featured sites", home_featured_sites_path %></li>
 </ul>
