--- a/app/views/shared/_left.html.erb
+++ b/app/views/shared/_left.html.erb
@@ -6,8 +6,8 @@
   <li><a href="#">Work</a></li>
   <li><%= link_to "Contact us", home_contact_us_path %></li>
   <li><a href="#">Friend</a></li>
-  <li><%= link_to "Blog", blog_index_path %></li>
-  <li><a href="#">Testimonials</a></li>
+  <li><%= link_to "Blog", blogs_path %></li>
+  <li><a href="#">Testimonials</ablogs_path></li>
   <li><a href="#">Video</a></li>
   <li><%= link_to "Featured sites", home_featured_sites_path %></li>
 </ul>
